[package]
name = "github-scraper"
version = "0.1.0"
authors = ["Roland Crosby <roland@rolandcrosby.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
github_v3 = "0.3.2"
serde = "1.0.106"
serde_derive = "1.0.106"
tokio = {version = "0.2", features = ["full"]}
